Update Makefile.win to be in sync with Makefile

--- a/ogc-tcpnp.adoc
+++ b/ogc-tcpnp.adoc
@@ -23,6 +23,8 @@
 :local-cache-only:
 :data-uri-image:
 :toc:
+:mn-document-class: ogc
+:mn-output-extensions: xml,html,doc,pdf
 
 //:sectnums!:
 //:sectnums:
