--- a/sources/ogc-tcpnp.adoc
+++ b/sources/ogc-tcpnp.adoc
@@ -24,7 +24,7 @@
 :imagesdir: images
 :docfile: ogc-tcpnp.adoc
 :mn-document-class: ogc
-:mn-output-extensions: xml,html,doc,pdf,rxl
+:mn-output-extensions: xml,html,doc,rxl
 :local-cache-only:
 :data-uri-image:
 
